--- a/RadioVeronicaForever.html
+++ b/RadioVeronicaForever.html
@@ -28,7 +28,7 @@ body {margin:0; padding:0;}
 
       <!--RadioVeronicaForever-->
           <video class="videobg" src="https://radioveronicaforever.github.io/RadioVeronicaForever/"RadioVeronicaForever.mp4" autoplay="" loop="" muted="">
-        <source src="https://radioveronicaforever.github.io/RadioVeronicaForever/"RadioVeronicaForever.mp4">
+        <source src="https://radioveronicaforever.github.io/RadioVeronicaForever/RadioVeronicaForever.mp4">
       </video>
 
 
