--- a/RadioVeronicaForever.html
+++ b/RadioVeronicaForever.html
@@ -3,5 +3,30 @@
 <html><head></script>
 <title>RadioVeronicaForever</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head><body><embed width="700" height="900" src="https://radioveronicaforever.github.io/RadioVeronicaForever/RadioVeronicaForever.mp4" "="" frameborder="0" scrolling="no" allow="autoplay;">
+</head><body>
+<style>
+
+body {margin:0; padding:0;}
+
+.videobg {
+    width: 100%;
+    height:100vh;
+    object-fit: cover;
+    z-index: 99999;
+}
+.chat { position: absolute; width: 620px; height: 410px; z-index: 99999; left:1px; top:20px;}
+
+</style>
+
+   </head>
+    <body>
+  <!--Codice Creato Da Dj Testardo-->
+<!--RadioVeronicaForever-->
+          <video class="videobg" src="https://radioveronicaforever.github.io/RadioVeronicaForever/RadioVeronicaForever.mp4" autoplay="" loop="" muted="">
+        <source src="https://radioveronicaforever.github.io/RadioVeronicaForever/RadioVeronicaForever.mp4">
+      </video>
 </body></html>
+
+
+
+
