--- a/RadioVeronicaForever.html
+++ b/RadioVeronicaForever.html
@@ -1,32 +1,36 @@
 <!--/*Codice Creato Da DjTestardo90 Vi Raccomando Copiate!-->
 
-<html><head></script>
+<html><head>
 <title>RadioVeronicaForever</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head><body>
+
 <style>
-
-body {margin:0; padding:0;}
-
-.videobg {
-    width: 100%;
-    height:100vh;
-    object-fit: cover;
-    z-index: 99999;
-}
-.chat { position: absolute; width: 620px; height: 410px; z-index: 99999; left:1px; top:20px;}
-
+		html, body {
+			margin:0;
+			padding:0;
+			/*overflow: hidden;*/
+			width:100%;
+			height:100%;
+		}
+		.fs-vid-background {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			z-index: 2;
+		}
+		.fs-vid-background video {
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+		}
+		video {
+			max-width: 100%;
+		}
 </style>
-
-   </head>
-    <body>
-  <!--Codice Creato Da Dj Testardo-->
-<!--RadioVeronicaForever-->
-          <video class="videobg" src="https://radioveronicaforever.github.io/RadioVeronicaForever/RadioVeronicaForever.mp4" autoplay="" loop="" muted="">
-        <source src="https://radioveronicaforever.github.io/RadioVeronicaForever/RadioVeronicaForever.mp4">
-      </video>
-</body></html>
-
-
-
-
+<div class="fs-vid-background">
+<video autoplay="true" muted="true" loop="true">
+<source src="https://radioveronicaforever.github.io/RadioVeronicaForever/RadioVeronicaForever.mp4" type="video/mp4">
+</video>
