--- a/RadioVeronicaForever.html
+++ b/RadioVeronicaForever.html
@@ -4,7 +4,7 @@
 <meta name="keywords" content="RadioVeronicaForever">
 <meta name="robots" content="RadioVeronicaForever">
 <meta name="googlebot" content="RadioVeronicaForever">
-<link rel="shortcut icon" href="https://i.postimg.cc/52Nhwfgy/sdsds.png">
+<link rel="shortcut icon" href="https://i.postimg.cc/Wzz3b8w8/ssssssssssssssssssss.png">
 <script src="https://radioveronicaforever.github.io/RadioVeronicaForever/jquery-3.2.1.min.js"></script>
 <script src="https://radioveronicaforever.github.io/RadioVeronicaForever/lunaradio-animadon.js"></script>
 
@@ -21,7 +21,7 @@ googlefont: "Playball&display=swap",
 fontratio: "0.5", 
 radioname: "RadioVeronicaForever", 
 scroll: "True", 
-coverimage: "https://i.postimg.cc/52Nhwfgy/sdsds.png",
+coverimage: "https://i.postimg.cc/Wzz3b8w8/ssssssssssssssssssss.png",
 onlycoverimage: "false",
 coverstyle: "Real",
 usevisualizer: "fake", 
