--- a/RadioVeronicaForever.html
+++ b/RadioVeronicaForever.html
@@ -28,7 +28,7 @@ usevisualizer: "fake",
 visualizertype: "7", 
 metadatatechnic: "ownmetadataurl",
 ownmetadataurl: "https://status.rcast.net/71583", 
-streamurl: "https://stream-151.zeno.fm/t2l8dpcdouitv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiJ0Mmw4ZHBjZG91aXR2IiwiaG9zdCI6InN0cmVhbS0xNTEuemVuby5mbSIsInJ0dGwiOjUsImp0aSI6InhCWDVPYy1OUk9TLWpWT1pZcm1Bb0EiLCJpYXQiOjE3MjA3MDAwMzgsImV4cCI6MTcyMDcwMDA5OH0.dAZPPk6GgfcMCxUDiJiVJE5PNTLnpLXf2sFk8KqHpYY", 
+streamurl: "https://stream-175.zeno.fm/t2l8dpcdouitv?zs=NCFXE3ncSlKDDfOLIofgJg", 
 streamtype: "icecast", 
 icecastmountpoint: "/radio.mp3",
 radiozenoid: "t2l8dpcdouitv",
