--- a/RadioVeronicaForever.html
+++ b/RadioVeronicaForever.html
@@ -6,7 +6,7 @@
 <meta name="googlebot" content="RadioVeronicaForever">
 <link rel="shortcut icon" href="https://i.postimg.cc/Wzz3b8w8/ssssssssssssssssssss.png">
 <script src="https://radioveronicaforever.github.io/RadioVeronicaForever/jquery-3.2.1.min.js"></script>
-<script src="https://radioveronicaforever.github.io/RadioVeronicaForever/lunaradio-animadon.js"></script>
+<script src="https://radioveronicaforever.github.io/RadioVeronicaForever/lunaradio-animadon.js"></script><div id="lunaradio" style="width:100%; height:100%px;"></div>
 <!--Player Fatto Da Dj Testardo-->
 <style>
 
