--- a/RadioVeronicaForever.html
+++ b/RadioVeronicaForever.html
@@ -74,7 +74,9 @@ coverstyle: "false",
 usevisualizer: "real", 
 visualizertype: "7", 
 metadatatechnic: "ownmetadataurl",
-ownmetadataurl: "https://status.rcast.net/71583", 
+artworkurl: "https://artwork.rcast.net/71583",
+ownmetadataurl: "https://status.rcast.net/71583",
+playlisturl: "https://playlist.rcast.net/71583",	
 streamurl: "https://stream-175.zeno.fm/t2l8dpcdouitv?zs=NCFXE3ncSlKDDfOLIofgJg",
 streamtype: "icecast", 
 icecastmountpoint: "/radio.mp3",
