--- a/Naaaaa.html
+++ b/Naaaaa.html
@@ -188,10 +188,10 @@
       'forceHTML5': true,
       'jsevents': true,
       'buffering': 0,
-      'title': 'RadioVivaForever',
+      'title': 'RadioVeronicaForever',
       'welcome': 'Benvenuti',
       'wmode': 'transparent',
-      'skin': 'wmp',
+      'skin': 'miniradio',
       'width': 386,
       'height': 47,
       'container': 'musesplayer'
