--- a/Naaaaa.html
+++ b/Naaaaa.html
@@ -17,11 +17,12 @@
       flex-direction: column;
       align-items: flex-start;
       margin: 40px;
+      width: 386px; /* Larghezza massima per contenere tutto */
     }
 
     /* COPERTINA */
     #coverWrapper {
-      width: 300px;
+      width: 100%;
       height: 300px;
       margin-bottom: 10px;
       border: 4px solid #3a3a3a;
@@ -51,7 +52,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      width: 300px;
+      width: 100%;
       height: 48px;
       overflow: hidden;
       padding: 0;
@@ -86,10 +87,10 @@
       color: white;
       line-height: 48px;
       text-shadow:
-        -1px -1px 0 red,
-         1px -1px 0 red,
-        -1px  1px 0 red,
-         1px  1px 0 red;
+         -1px -1px 0 red,
+          1px -1px 0 red,
+         -1px  1px 0 red,
+          1px  1px 0 red;
     }
 
     @keyframes scroll-left {
@@ -102,17 +103,10 @@
     }
 
     /* PLAYER MUSES */
-    .player-wrapper {
-      width: 300px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 10px;
-    }
-
     #musesplayer {
-      width: 300px; /* Importante: deve corrispondere al contenitore per centrarlo */
+      width: 100%;
       height: 47px;
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -136,9 +130,7 @@
     </div>
 
     <!-- PLAYER MUSES -->
-    <div class="player-wrapper">
-      <div id="musesplayer"></div>
-    </div>
+    <div id="musesplayer"></div>
 
   </div>
 
@@ -201,7 +193,7 @@
       'welcome': 'Benvenuti',
       'wmode': 'transparent',
       'skin': 'miniradio',
-      'width': 300,
+      'width': 386,
       'height': 47,
       'container': 'musesplayer'
     });
