--- a/Naaaaa.html
+++ b/Naaaaa.html
@@ -17,12 +17,12 @@
       flex-direction: column;
       align-items: flex-start;
       margin: 40px;
-      width: 386px; /* Larghezza massima per contenere tutto */
+      width: 386px; /* Larghezza sufficiente per mostrare il player */
     }
 
     /* COPERTINA */
     #coverWrapper {
-      width: 100%;
+      width: 300px;
       height: 300px;
       margin-bottom: 10px;
       border: 4px solid #3a3a3a;
@@ -52,7 +52,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      width: 100%;
+      width: 300px;
       height: 48px;
       overflow: hidden;
       padding: 0;
@@ -104,7 +104,7 @@
 
     /* PLAYER MUSES */
     #musesplayer {
-      width: 100%;
+      width: 386px; /* Mostra il player per intero */
       height: 47px;
       margin-top: 10px;
     }
@@ -204,14 +204,12 @@
         const audio = playerContainer.querySelector('audio');
         if (audio) {
           audio.onerror = () => {
-            console.log('Errore audio, riavvio...');
             setTimeout(() => {
               audio.load();
               audio.play();
             }, 1000);
           };
           audio.onended = () => {
-            console.log('Stream terminato, riavvio...');
             setTimeout(() => {
               audio.load();
               audio.play();
