--- a/Naaaaa.html
+++ b/Naaaaa.html
@@ -3,34 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Radio Player con Copertine e Titoli</title>
-
+  <title>Radio Veronica Forever</title>
   <style>
     body {
       background: transparent;
       margin: 0;
       font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center; /* centra la colonna orizzontalmente nella pagina */
+      padding: 40px 0;
     }
 
     #mainContainer {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      margin: 40px;
-      width: 386px; /* Larghezza sufficiente per mostrare il player */
+      width: 386px; /* contiene tutto */
     }
 
-    /* COPERTINA */
     #coverWrapper {
       width: 300px;
       height: 300px;
       margin-bottom: 10px;
       border: 4px solid #3a3a3a;
       border-radius: 10px;
-      background: transparent;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
 
     #coverArt {
@@ -38,89 +34,67 @@
       height: 100%;
       object-fit: cover;
       border-radius: 6px;
-      display: block;
-      opacity: 1;
       transition: opacity 0.6s ease-in-out;
     }
 
-    /* TITOLI CHE SCORRONO */
     .now-playing-box {
-      margin: 20px 0 10px 0;
+      margin: 20px 0 5px 0; /* spazio ridotto sotto i titoli */
       font-size: 20px;
       font-family: Playball, cursive;
       color: white;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
       width: 300px;
       height: 48px;
+      display: flex;
+      align-items: center;
       overflow: hidden;
-      padding: 0;
-      background: transparent;
     }
 
     .bar {
       font-size: 26px;
       font-weight: bold;
       color: #3a3a3a;
-      user-select: none;
       padding: 0 12px;
-      flex-shrink: 0;
-      line-height: 48px;
     }
 
     .scroll-container {
       flex: 1;
-      overflow: hidden;
       position: relative;
       height: 100%;
       display: flex;
       align-items: center;
+      overflow: hidden;
       padding-left: 4px;
     }
 
     .scrolling-text {
       position: absolute;
       white-space: nowrap;
-      will-change: transform;
       animation: scroll-left 12s linear infinite;
       color: white;
-      line-height: 48px;
       text-shadow:
-         -1px -1px 0 red,
-          1px -1px 0 red,
-         -1px  1px 0 red,
-          1px  1px 0 red;
+        -1px -1px 0 red,
+         1px -1px 0 red,
+        -1px  1px 0 red,
+         1px  1px 0 red;
     }
 
     @keyframes scroll-left {
-      0% {
-        transform: translateX(100%);
-      }
-      100% {
-        transform: translateX(-100%);
-      }
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
     }
 
-    /* PLAYER MUSES */
     #musesplayer {
-      width: 386px; /* Mostra il player per intero */
+      width: 386px;
       height: 47px;
-      margin-top: 10px;
+      margin-top: 5px; /* poco spazio sotto il titolo */
     }
   </style>
 </head>
-
 <body>
-
   <div id="mainContainer">
-
-    <!-- COPERTINA -->
     <div id="coverWrapper">
       <img id="coverArt" src="https://i.postimg.cc/bvdkRdR3/sssssswwww.png" alt="Cover Art" />
     </div>
-
-    <!-- TITOLI CHE SCORRONO -->
     <div class="now-playing-box">
       <div class="bar">|</div>
       <div class="scroll-container">
@@ -128,19 +102,15 @@
       </div>
       <div class="bar">|</div>
     </div>
-
-    <!-- PLAYER MUSES -->
     <div id="musesplayer"></div>
-
   </div>
 
-  <!-- SCRIPT METADATI -->
   <script>
     const streamId = 't2l8dpcdouitv';
     const metadataUrl = `https://api.zeno.fm/mounts/metadata/subscribe/${streamId}`;
     const titleEl = document.getElementById('npTitle');
     const coverArt = document.getElementById('coverArt');
-    const defaultCover = "https://i.postimg.cc/bvdkRdR3/sssssswwww.png";
+    const defaultCover = coverArt.src;
 
     const es = new EventSource(metadataUrl);
     es.onmessage = async event => {
@@ -151,12 +121,11 @@
 
         if (rawTitle.includes('-')) {
           const [artist, track] = rawTitle.split('-').map(s => s.trim());
-          const query = encodeURIComponent(`${artist} ${track}`);
-          const res = await fetch(`https://itunes.apple.com/search?term=${query}&limit=1`);
-          const json = await res.json();
-          if (json.results.length > 0) {
-            const albumArt = json.results[0].artworkUrl100.replace('100x100bb', '300x300bb');
-            transitionCover(albumArt);
+          const q = encodeURIComponent(`${artist} ${track}`);
+          const res = await fetch(`https://itunes.apple.com/search?term=${q}&limit=1`);
+          const js = await res.json();
+          if (js.results.length) {
+            transitionCover(js.results[0].artworkUrl100.replace('100x100bb', '300x300bb'));
           } else {
             transitionCover(defaultCover);
           }
@@ -168,57 +137,44 @@
       }
     };
 
-    function transitionCover(newSrc) {
-      coverArt.style.opacity = "0";
+    function transitionCover(src) {
+      coverArt.style.opacity = 0;
       setTimeout(() => {
-        coverArt.src = newSrc;
-        coverArt.style.opacity = "1";
+        coverArt.src = src;
+        coverArt.style.opacity = 1;
       }, 500);
     }
 
-    es.onerror = err => console.error('SSE error:', err);
+    es.onerror = err => console.error('SSE error', err);
   </script>
 
-  <!-- SCRIPT PLAYER MUSES -->
   <script src="https://hosted.muses.org/mrp.js"></script>
   <script>
     MRP.insert({
-      'url': 'https://stream-179.zeno.fm/t2l8dpcdouitv',
-      'volume': 100,
-      'autoplay': true,
-      'forceHTML5': true,
-      'jsevents': true,
-      'buffering': 0,
-      'title': 'RadioVeronicaForever',
-      'welcome': 'Benvenuti',
-      'wmode': 'transparent',
-      'skin': 'miniradio',
-      'width': 289,
-      'height': 112,
-      'container': 'musesplayer'
+      url: 'https://stream-179.zeno.fm/t2l8dpcdouitv',
+      volume: 100,
+      autoplay: true,
+      forceHTML5: true,
+      jsevents: true,
+      buffering: 0,
+      title: 'Radio Veronica Forever',
+      welcome: 'Benvenuti',
+      wmode: 'transparent',
+      skin: 'miniradio',
+      width: 386,
+      height: 112,
+      container: 'musesplayer'
     });
 
     window.addEventListener('load', () => {
-      const playerContainer = document.getElementById('musesplayer');
       setTimeout(() => {
-        const audio = playerContainer.querySelector('audio');
+        const audio = document.querySelector('#musesplayer audio');
         if (audio) {
-          audio.onerror = () => {
-            setTimeout(() => {
-              audio.load();
-              audio.play();
-            }, 1000);
-          };
-          audio.onended = () => {
-            setTimeout(() => {
-              audio.load();
-              audio.play();
-            }, 1000);
-          };
+          audio.onerror = () => setTimeout(() => (audio.load(), audio.play()), 1000);
+          audio.onended = () => setTimeout(() => (audio.load(), audio.play()), 1000);
         }
       }, 1000);
     });
   </script>
-
 </body>
 </html>
