--- a/Naaaaa.html
+++ b/Naaaaa.html
@@ -14,9 +14,9 @@
     #mainContainer {
       display: flex;
       flex-direction: column;
-      align-items: flex-start; /* Tutto allineato a sinistra */
-      margin-left: 40px; /* Spazio dal bordo sinistro */
-      max-width: 320px; /* Limita larghezza per mantenere tutto ordinato */
+      align-items: flex-start; /* Tutto a sinistra */
+      margin-left: 40px;
+      max-width: 320px;
     }
 
     #coverWrapper {
@@ -36,7 +36,7 @@
     }
 
     .now-playing-box {
-      margin: 20px 0 5px 0; /* Riduci margine sotto i titoli */
+      margin: 20px 0 5px 0;
       font-size: 20px;
       font-family: Playball, cursive;
       color: white;
@@ -81,11 +81,11 @@
       100% { transform: translateX(-100%); }
     }
 
-    /* Player Muses allineato a sinistra, vicino ai titoli */
+    /* Player Muses vicino ai titoli */
     #musesplayer {
       width: 289px;
       height: 112px;
-      margin-top: 3px; /* Meno spazio sopra il player */
+      margin-top: 1px; /* Ridotto ancora per avvicinare */
     }
   </style>
 </head>
