--- a/Naaaaa.html
+++ b/Naaaaa.html
@@ -36,7 +36,7 @@
     }
 
     .now-playing-box {
-      margin: 20px 0 5px 0;
+      margin: 20px 0 0 0; /* tolto margin-bottom */
       font-size: 20px;
       font-family: Playball, cursive;
       color: white;
@@ -85,7 +85,7 @@
     #musesplayer {
       width: 289px;
       height: 112px;
-      margin-top: 1px; /* Ridotto ancora per avvicinare */
+      margin-top: 0; /* Nessuno spazio sopra il player */
     }
   </style>
 </head>
