--- a/Naaaaa.html
+++ b/Naaaaa.html
@@ -1,93 +1,84 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Radio Veronica Forever</title>
-  <style>
-    body {
-      background: transparent;
-      margin: 20px;
-      font-family: Arial, sans-serif;
-    }
-
-    #mainContainer {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start; /* Tutto a sinistra */
-      margin-left: 40px;
-      max-width: 320px;
-    }
-
-    #coverWrapper {
-      width: 300px;
-      height: 300px;
-      margin-bottom: 10px;
-      border: 4px solid #3a3a3a;
-      border-radius: 10px;
-    }
-
-    #coverArt {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 6px;
-      transition: opacity 0.6s ease-in-out;
-    }
-
-    .now-playing-box {
-      margin: 20px 0 0 0; /* tolto margin-bottom */
-      font-size: 20px;
-      font-family: Playball, cursive;
-      color: white;
-      width: 300px;
-      height: 48px;
-      display: flex;
-      align-items: center;
-      overflow: hidden;
-    }
-
-    .bar {
-      font-size: 26px;
-      font-weight: bold;
-      color: #3a3a3a;
-      padding: 0 12px;
-    }
-
-    .scroll-container {
-      flex: 1;
-      position: relative;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      overflow: hidden;
-      padding-left: 4px;
-    }
-
-    .scrolling-text {
-      position: absolute;
-      white-space: nowrap;
-      animation: scroll-left 12s linear infinite;
-      color: white;
-      text-shadow:
-        -1px -1px 0 red,
-         1px -1px 0 red,
-        -1px  1px 0 red,
-         1px  1px 0 red;
-    }
-
-    @keyframes scroll-left {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
-
-    /* Player Muses vicino ai titoli */
-    #musesplayer {
-      width: 289px;
-      height: 112px;
-      margin-top: 0; /* Nessuno spazio sopra il player */
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Radio Veronica Forever</title>
+<style>
+  body {
+    background: transparent;
+    margin: 20px;
+    font-family: Arial, sans-serif;
+  }
+  #mainContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* allinea tutto a sinistra */
+    margin-left: 40px;
+    max-width: 320px;
+  }
+  #coverWrapper {
+    width: 300px;
+    height: 300px;
+    margin-bottom: 10px;
+    border: 4px solid #3a3a3a;
+    border-radius: 10px;
+  }
+  #coverArt {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 6px;
+    transition: opacity 0.6s ease-in-out;
+  }
+  .now-playing-box {
+    margin: 20px 0 2px 0; /* margine sotto molto ridotto */
+    font-size: 20px;
+    font-family: Playball, cursive;
+    color: white;
+    width: 300px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+  }
+  .bar {
+    font-size: 26px;
+    font-weight: bold;
+    color: #3a3a3a;
+    padding: 0 12px;
+  }
+  .scroll-container {
+    flex: 1;
+    position: relative;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    padding-left: 4px;
+  }
+  .scrolling-text {
+    position: absolute;
+    white-space: nowrap;
+    animation: scroll-left 12s linear infinite;
+    color: white;
+    text-shadow:
+      -1px -1px 0 red,
+       1px -1px 0 red,
+      -1px  1px 0 red,
+       1px  1px 0 red;
+  }
+  @keyframes scroll-left {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(-100%); }
+  }
+  #musesplayer {
+    width: 289px;
+    height: 112px;
+    margin-top: 0; /* zero margine sopra */
+    align-self: flex-start; /* assicura allineamento sinistro */
+  }
+</style>
 </head>
 <body>
   <div id="mainContainer">
@@ -104,7 +95,6 @@
     <div id="musesplayer"></div>
   </div>
 
-  <!-- Script metadati -->
   <script>
     const streamId = 't2l8dpcdouitv';
     const metadataUrl = `https://api.zeno.fm/mounts/metadata/subscribe/${streamId}`;
@@ -148,7 +138,6 @@
     es.onerror = err => console.error('SSE error', err);
   </script>
 
-  <!-- Script player Muses -->
   <script src="https://hosted.muses.org/mrp.js"></script>
   <script>
     MRP.insert({
