--- a/fre.html
+++ b/fre.html
@@ -13,7 +13,7 @@
   #mainContainer {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* tutto a sinistra */
+    align-items: flex-start; /* Allineamento a sinistra */
     margin-left: 40px;
     max-width: 320px;
   }
@@ -32,7 +32,7 @@
     transition: opacity 0.6s ease-in-out;
   }
   .now-playing-box {
-    margin: 20px 0 0 0; /* margine sotto azzerato */
+    margin: 0 0 4px 0; /* Poco spazio sotto i titoli */
     font-size: 20px;
     font-family: Playball, cursive;
     color: white;
@@ -75,8 +75,8 @@
   #musesplayer {
     width: 289px;
     height: 112px;
-    margin-top: -12px; /* margine negativo per avvicinare */
-    align-self: flex-start; /* allineamento sinistro */
+    margin-top: 2px; /* Spazio molto piccolo per avvicinare il player */
+    align-self: flex-start; /* Allineamento a sinistra */
   }
 </style>
 </head>
