--- a/fre.html
+++ b/fre.html
@@ -10,7 +10,6 @@
       background: transparent;
       margin: 20px;
       font-family: Arial, sans-serif;
-      color: white;
     }
 
     #mainContainer {
@@ -18,13 +17,14 @@
       flex-direction: column;
       align-items: flex-start; /* Allinea tutto a sinistra */
       margin-left: 40px; /* Spazio dal bordo sinistro */
+      gap: 2px; /* Spaziatura uniforme molto piccola */
     }
 
     /* COPERTINA */
     #coverWrapper {
       width: 300px;
       height: 300px;
-      margin-bottom: 4px; /* Ridotto da 10px a 4px */
+      margin-bottom: 0; /* Ridotto spazio sotto */
       border: 4px solid #3a3a3a;
       border-radius: 10px;
       background: transparent;
@@ -45,7 +45,7 @@
 
     /* TITOLI CHE SCORRONO */
     .now-playing-box {
-      margin: 0 0 2px 0; /* Ridotto da 20px/10px a 0 0 2px 0 */
+      margin: 0; /* Nessuno spazio sopra o sotto */
       font-size: 20px;
       font-family: Playball, cursive;
       color: white;
@@ -104,9 +104,9 @@
 
     /* PLAYER MUSES */
     #musesplayer {
-      width: 289px;   /* mantenuto come da te richiesto */
-      height: 112px;  /* mantenuto come da te richiesto */
-      margin-top: 0;  /* ridotto al minimo per avvicinare */
+      width: 289px; /* mantenuto come richiesto */
+      height: 112px; /* mantenuto come richiesto */
+      margin-top: 0; /* zero spazio sopra */
       align-self: flex-start; /* allineato a sinistra */
     }
   </style>
