--- a/fre.html
+++ b/fre.html
@@ -17,20 +17,20 @@
       flex-direction: column;
       align-items: flex-start; /* Allinea tutto a sinistra */
       margin-left: 40px; /* Spazio dal bordo sinistro */
-      gap: 2px; /* Spaziatura uniforme molto piccola */
+      gap: 4px; /* Riduce lo spazio verticale tra gli elementi */
     }
 
     /* COPERTINA */
     #coverWrapper {
       width: 300px;
       height: 300px;
-      margin-bottom: 0; /* Ridotto spazio sotto */
       border: 4px solid #3a3a3a;
       border-radius: 10px;
       background: transparent;
       display: flex;
       align-items: center;
       justify-content: center;
+      margin: 0; /* Nessun margine */
     }
 
     #coverArt {
@@ -45,7 +45,7 @@
 
     /* TITOLI CHE SCORRONO */
     .now-playing-box {
-      margin: 0; /* Nessuno spazio sopra o sotto */
+      margin: 0;
       font-size: 20px;
       font-family: Playball, cursive;
       color: white;
@@ -64,7 +64,7 @@
       font-weight: bold;
       color: #3a3a3a;
       user-select: none;
-      padding: 0 12px;
+      padding: 0 8px;
       flex-shrink: 0;
       line-height: 48px;
     }
@@ -104,10 +104,10 @@
 
     /* PLAYER MUSES */
     #musesplayer {
-      width: 289px; /* mantenuto come richiesto */
-      height: 112px; /* mantenuto come richiesto */
-      margin-top: 0; /* zero spazio sopra */
-      align-self: flex-start; /* allineato a sinistra */
+      width: 289px; /* mantenuto come da te richiesto */
+      height: 112px; /* mantenuto come da te richiesto */
+      margin-top: 4px; /* molto vicino sotto i titoli */
+      margin-left: 0;
     }
   </style>
 </head>
