--- a/RadioVeronicaForever.html
+++ b/RadioVeronicaForever.html
@@ -3,34 +3,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Radio Copertina e Titoli</title>
+  <title>Radio Veronica Forever</title>
 
   <style>
     body {
       background: transparent;
-      margin: 20px;
+      margin: 0;
+      padding: 20px;
       font-family: Arial, sans-serif;
       color: white;
+      display: flex;
+      justify-content: center;  /* Centra tutto orizzontalmente */
     }
 
     #mainContainer {
       display: flex;
       flex-direction: column;
-      align-items: flex-start; /* Allineamento a sinistra */
-      margin-left: 40px;
+      align-items: center;      /* Centratura interna */
+      max-width: 320px;
     }
 
-    /* Copertina */
+    /* COPERTINA */
     #coverWrapper {
       width: 300px;
       height: 300px;
       border: 4px solid #3a3a3a;
       border-radius: 10px;
+      background: transparent;
       display: flex;
       align-items: center;
       justify-content: center;
       margin-bottom: 5px;
-      background: transparent;
     }
 
     #coverArt {
@@ -42,20 +45,20 @@
       opacity: 1;
     }
 
-    /* Titoli */
+    /* TITOLI */
     .now-playing-box {
       width: 300px;
       height: 48px;
       display: flex;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center;  /* Centrati i titoli */
       font-family: Playball, cursive;
       font-size: 20px;
-      color: white;
       background: transparent;
       overflow: hidden;
-      margin: 0;
+      margin: 0 0 4px 0;
       padding: 0;
+      color: white;
     }
 
     .bar {
@@ -64,17 +67,17 @@
       color: #3a3a3a;
       user-select: none;
       padding: 0 8px;
-      flex-shrink: 0;
       line-height: 48px;
+      flex-shrink: 0;
     }
 
     .scroll-container {
       flex: 1;
-      overflow: hidden;
       position: relative;
       height: 100%;
       display: flex;
       align-items: center;
+      overflow: hidden;
       padding-left: 4px;
     }
 
@@ -99,9 +102,7 @@
 </head>
 
 <body>
-
   <div id="mainContainer">
-
     <div id="coverWrapper">
       <img id="coverArt" src="https://i.postimg.cc/bvdkRdR3/sssssswwww.png" alt="Cover Art" />
     </div>
@@ -113,7 +114,6 @@
       </div>
       <div class="bar">|</div>
     </div>
-
   </div>
 
   <script>
@@ -121,7 +121,7 @@
     const metadataUrl = `https://api.zeno.fm/mounts/metadata/subscribe/${streamId}`;
     const titleEl = document.getElementById('npTitle');
     const coverArt = document.getElementById('coverArt');
-    const defaultCover = "https://i.postimg.cc/bvdkRdR3/sssssswwww.png";
+    const defaultCover = coverArt.src;
 
     const es = new EventSource(metadataUrl);
     es.onmessage = async event => {
@@ -132,12 +132,11 @@
 
         if (rawTitle.includes('-')) {
           const [artist, track] = rawTitle.split('-').map(s => s.trim());
-          const query = encodeURIComponent(`${artist} ${track}`);
-          const res = await fetch(`https://itunes.apple.com/search?term=${query}&limit=1`);
-          const json = await res.json();
-          if (json.results.length > 0) {
-            const albumArt = json.results[0].artworkUrl100.replace('100x100bb', '300x300bb');
-            transitionCover(albumArt);
+          const q = encodeURIComponent(`${artist} ${track}`);
+          const res = await fetch(`https://itunes.apple.com/search?term=${q}&limit=1`);
+          const js = await res.json();
+          if (js.results.length) {
+            transitionCover(js.results[0].artworkUrl100.replace('100x100bb', '300x300bb'));
           } else {
             transitionCover(defaultCover);
           }
@@ -149,16 +148,15 @@
       }
     };
 
-    function transitionCover(newSrc) {
-      coverArt.style.opacity = "0";
+    function transitionCover(src) {
+      coverArt.style.opacity = 0;
       setTimeout(() => {
-        coverArt.src = newSrc;
-        coverArt.style.opacity = "1";
+        coverArt.src = src;
+        coverArt.style.opacity = 1;
       }, 500);
     }
 
     es.onerror = err => console.error('SSE error:', err);
   </script>
-
 </body>
 </html>
