--- a/RadioVeronicaForever.html
+++ b/RadioVeronicaForever.html
@@ -13,19 +13,19 @@
       font-family: Arial, sans-serif;
       color: white;
       display: flex;
-      justify-content: center;  /* Centra tutto orizzontalmente */
+      justify-content: center; /* centro orizzontale */
     }
 
     #mainContainer {
       display: flex;
       flex-direction: column;
-      align-items: center;      /* Centratura interna */
-      max-width: 320px;
+      align-items: center;
+      max-width: 280px;
     }
 
     /* COPERTINA */
     #coverWrapper {
-      width: 300px;
+      width: 270px;  /* leggermente più corta */
       height: 300px;
       border: 4px solid #3a3a3a;
       border-radius: 10px;
@@ -47,11 +47,11 @@
 
     /* TITOLI */
     .now-playing-box {
-      width: 300px;
+      width: 270px;
       height: 48px;
       display: flex;
       align-items: center;
-      justify-content: center;  /* Centrati i titoli */
+      justify-content: center;
       font-family: Playball, cursive;
       font-size: 20px;
       background: transparent;
